# sqreenshot

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
resources/: about.html  resources.qrc
resources/linux/: org.azdrums.sqreenshot.appdata.xml  org.azdrums.sqreenshot.desktop
resources/translations/: sqreenshot_it_IT.qm  sqreenshot_it_IT.ts  sqreenshot_ko_KR.ts
src/: defs.hpp  dialogmain.cpp  dialogmain.hpp  dialogmain.ui  dialogscreenshot.cpp  dialogscreenshot.hpp  dialogscreenshot.ui  dialogselectionarea.cpp  dialogselectionarea.hpp  settings.cpp  settings.hpp  sqreenshot.cpp  sqreenshot.hpp
